--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="25sp"
-
         android:textStyle="bold" />
 
     <TextView
@@ -44,14 +43,35 @@
         android:textColor="@color/textColor"
         android:textSize="25sp"
         android:textStyle="bold" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Select Date"
-            android:layout_marginTop="15dp"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            />
+
+    <Button
+        android:id="@+id/btnDatePicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Select Date"
+        android:textColor="#929292"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:backgroundTint="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tvSelectedDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Selected Date"
+        android:textColor="@color/lightGreyTextColor"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Age in minutes"
+        android:textColor="@color/lightGreyTextColor"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
